tests/snapshots/rust-stable/acceptance__allow_stays_on_fn.snap
---
source: tests/acceptance_tests.rs
expression: output
---
running 1 test
test allow_stays_on_fn::_42_expects ... ok
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s
