tests/snapshots/rust-stable/acceptance__cases_are_enumerated.snap
---
source: tests/acceptance_tests.rs
expression: output
---
test cases_are_enumerated::test_case_1_42_expects ... ok
test cases_are_enumerated::test_case_2_42_expects ... ok
test result: ok. 2 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s
