tests/snapshots/rust-stable/acceptance__cases_can_be_declared_on_async_methods.snap
---
source: tests/acceptance_tests.rs
assertion_line: 73
expression: output
---
running 2 tests
test result: ok. 2 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s
test works_seamlessly_with_async_std::_100i32_expects_100usize ... ok
test works_seamlessly_with_tokio::_100i32_expects_100usize ... ok
