tests/snapshots/rust-stable/acceptance__cases_can_be_declared_on_non_test_items.snap
---
source: tests/acceptance_tests.rs
assertion_line: 76
expression: output
---
    internal_tested_function1::_3_expects_6
  left: `6`,
 right: `0`', src/lib.rs:8:1
---- internal_tested_function1::_3_expects_6 stdout ----
error: test failed, to rerun pass '--lib'
failures:
failures:
running 6 tests
test internal_tested_function1::_2_expects_4 ... ok
test internal_tested_function1::_3_expects_6 ... FAILED
test internal_tested_function2::_1_expects_0 ... ok
test internal_tested_function3::_1_expects_matching_3_ ... ok
test internal_tested_function3::_2_expects_inconclusive6 ... ignored
test internal_tested_function4::_2_expects_panicking_some_can_t_ - should panic ... ok
test result: FAILED. 4 passed; 1 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.00s
thread 'internal_tested_function1::_3_expects_6' panicked at 'assertion failed: `(left == right)`
