tests/snapshots/rust-stable/acceptance__cases_declared_on_non_test_items_can_be_used.snap
---
source: tests/acceptance_tests.rs
assertion_line: 75
expression: output
---
     Running `target/debug/cases_can_be_declared_on_non_test_items`
thread 'main' panicked at 'Can't', src/lib.rs:33:5
